--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -14,3 +14,8 @@
 	<p>(This one does block elements on the background)</p>
   <a href="#" onclick="hide('popup2')">Ok!</a>
 </div>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+<script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
+```
+
+```css
