--- a/stronka4/static/style.css
+++ b/stronka4/static/style.css
@@ -1,76 +1,24 @@
-.popup {
-    display: none;
-    position: fixed;
-    padding: 10px;
-    width: 280px;
-    left: 50%;
-    margin-left: -150px;
-    height: 180px;
-    top: 50%;
-    margin-top: -100px;
-    background: #FFF;
-    z-index: 20;
-  }
-  
-  #popup1 {
-    -webkit-box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
-    box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
-  }
-  
-  #popup2:after {
-    position: fixed;
-    content: "";
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(0,0,0,0.5);
-    z-index: -2;
-  }
-  
-  #popup2:before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #FFF;
-    z-index: -1;
-  }
-  
-  /* From here on, just aesthetics */
-  
-  body {
-    background: #1abc9c;
-    font-family: Arial, sans-serif;
-    font-size: 120%;
-    padding: 20px;
-  }
-  
-  a,
-  a:visited {
-    text-decoration: none;
-    color: #FFF;
-    font-weight: bold;
-    display: block;
-    margin: 10px 0;
-  }
-  
-  a:hover,
-  a:active {
-    text-decoration: underline;
-  }
-  
-  .popup a,
-  .popup a:visited {
-    color: #1abc9c;
-  }
-  
-  p {
-      margin: 1em 0;
-  }
-  
-  p+p+p {
-      font-size: 60%;
-  }
+.popup-content {
+  background: #FFF;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  position: relative;
+}
+
+.close {
+  color: #aaa;
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
