--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -1,21 +1,78 @@
-<a href="#" onclick="show('popup1')">Show popup (box-shadow)</a>
-<a href="#" onclick="show('popup2')">Show popup (:before & :after)</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Local Car Mechanic</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+          <ul>
+              <li><a href="#" onclick="show('popup1')">About Us</a></li>
+              <li><a href="#" onclick="show('popup2')">Services</a></li>
+              <li><a href="#" onclick="show('popup3')">Gallery</a></li>
+              <li><a href="#" onclick="show('popup4')">Contact</a></li>
+          </ul>
+      </nav>
+    </header>
 
-<div class="popup" id="popup1">
-  <p>This is a popup!</p>
-  <p>Overlay uses <b>box-shadow</b>.</p>
-	<p>(Doesn't block elements on background)</p>
-  <a href="#" onclick="hide('popup1')">Ok!</a>
-</div>
+    <section id="about">
+        <h1>About Us</h1>
+        <p>Welcome to our local car mechanic shop. We specialize in ...</p>
+    </section>
 
-<div class="popup" id="popup2">
-  <p>This is a popup!</p>
-  <p>Overlay uses <b>:before</b> and <b>:after</b> pseudo-classes.</p>
-	<p>(This one does block elements on the background)</p>
-  <a href="#" onclick="hide('popup2')">Ok!</a>
-</div>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-<script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
-```
+    <section id="services">
+        <h1>Services</h1>
+        <p>Our services include ...</p>
+    </section>
 
-```css
+    <section id="gallery">
+        <h1>Gallery</h1>
+        <p>Check out some of our work ...</p>
+    </section>
+
+    <section id="contact">
+        <h1>Contact</h1>
+        <p>Get in touch with us ...</p>
+    </section>
+
+    <div id="popup1" class="popup">
+      <div class="popup-content">
+          <span class="close">&times;</span>
+          <p>About Us content...</p>
+      </div>
+  </div>
+  
+  <div id="popup2" class="popup">
+      <div class="popup-content">
+          <span class="close">&times;</span>
+          <p>Services content...</p>
+      </div>
+  </div>
+
+  <div id="popup3" class="popup">
+      <div class="popup-content">
+          <span class="close">&times;</span>
+          <p>Gallery content...</p>
+      </div>
+  </div>
+
+  <div id="popup4" class="popup">
+      <div class="popup-content">
+          <span class="close">&times;</span>
+          <p>Contact content...</p>
+      </div>
+  </div>
+  
+    <a href="#" onclick="show('popup1')">Show Popup 1</a>
+    <a href="#" onclick="show('popup2')">Show Popup 2</a>
+    <a href="#" onclick="show('popup3')">Show Popup 3</a>
+    <a href="#" onclick="show('popup4')">Show Popup 4</a>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts.js') }}"></script>
+
+</body>
+</html>
