--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -72,6 +72,9 @@
             <a href="https://www.facebook.com/profile.php?id=61552495111520" target="_blank"><img src="{{ url_for('static', filename='images/facebook-icon.png') }}" alt="Facebook"></a>
             <a href="https://www.instagram.com/motospec.serwis/" target="_blank"><img src="{{ url_for('static', filename='images/instagram-icon.png') }}" alt="Instagram"></a>
         </p>
+        <p>Find us here:
+            <a href="https://www.google.com/maps/dir/?api=1&destination=Motospec+Serwis+Samochodowy,+Generała+Władysława+Sikorskiego+94,+44-103+Gliwice" target="_blank"><img src="{{ url_for('static', filename='images/google-maps-icon.png') }}" alt="Google Maps"></a>
+        </p>
     </footer>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
