--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -52,7 +52,12 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2>Contact Us</h2>
-                <p>Need to book an appointment or have a question? Reach out to us...</p>
+                <p>Need to book an appointment or have a question? Reach out to us:</p>
+                <div class="contact-options">
+                    <a href="tel:+1234567890" class="contact-person">Call Person 1</a>
+                    <a href="tel:+1234567891" class="contact-person">Call Person 2</a>
+                    <a href="tel:+1234567892" class="contact-person">Call Person 3</a>
+                </div>
                 <!-- Google Maps Embed -->
                 <div class="google-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2549.0841379255903!2d18.73525917722413!3d50.29035727156201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6bb30835716a3609%3A0x6a5c64b627f42465!2sMotospec%20Serwis%20Samochodowy!5e0!3m2!1sen!2spl!4v1708367202157!5m2!1sen!2spl" 
