--- a/stronka4/static/style.css
+++ b/stronka4/static/style.css
@@ -212,3 +212,55 @@ footer {
         flex-grow: 1; /* Allow boxes to grow as needed */
     }
 }
+
+/* Thumbnail images */
+.thumbnails img {
+  width: 100px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.thumbnails img:hover {
+  transform: scale(1.1);
+}
+
+/* Lightbox */
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox-content {
+  position: relative;
+}
+
+.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  font-size: 24px;
+  color: white;
+  user-select: none;
+}
+
+.arrow.left {
+  left: 0;
+}
+
+.arrow.right {
+  right: 0;
+}
+
+.fullsize-photo {
+  display: block;
+  max-width: 90%;
+  max-height: 80vh;
+}
