--- a/stronka4/static/style.css
+++ b/stronka4/static/style.css
@@ -264,3 +264,26 @@ footer {
   max-width: 90%;
   max-height: 80vh;
 }
+
+.lightbox-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: red; /* Red background for visibility */
+  color: white; /* White text */
+  border: none; /* Remove default border */
+  cursor: pointer; /* Change cursor to pointer */
+  font-size: 20px; /* Increase font size for better visibility */
+  padding: 5px 10px; /* Padding around the text */
+  border-radius: 50%; /* Circle shape */
+  z-index: 3; /* Ensure it's above the photo */
+}
+
+.close-lightbox {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+}
