--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -54,6 +54,7 @@
                         <span class="arrow left">&#10094;</span>
                         <img class="fullsize-photo">
                         <span class="arrow right">&#10095;</span>
+                        <span class="close-lightbox">&times;</span>
                     </div>
                 </div>
             </div>
