--- a/stronka4/templates/index.html
+++ b/stronka4/templates/index.html
@@ -15,6 +15,7 @@
                 <li><button id="servicesBtn">Services</button></li>
                 <li><button id="galleryBtn">Gallery</button></li>
                 <li><button id="contactBtn">Contact Us</button></li>
+                <button id="theme-toggle">Toggle Theme</button>
             </ul>
         </nav>
     </header>
