--- a/stronka4/static/style.css
+++ b/stronka4/static/style.css
@@ -305,6 +305,22 @@ footer {
   }
 }
 
+/* Light theme styles */
+.light-theme {
+  --background-color: #ffffff;
+  --text-color: #000000;
+  --link-color: #0000ff;
+  --modal-background-color: #fefefe;
+}
+
+/* Dark theme styles */
+.dark-theme {
+  --background-color: #121212;
+  --text-color: #ffffff;
+  --link-color: #bb86fc;
+  --modal-background-color: #333333;
+}
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -316,19 +332,4 @@ a {
 
 .modal-content {
   background-color: var(--modal-background-color);
-}
-
-.dark-theme {
-  --background-color: #121212;
-  --text-color: #ffffff;
-  --link-color: #bb86fc;
-  --modal-background-color: #333333;
-}
-
-/* Light theme variables are already defined as the default */
-.light-theme {
-  --background-color: #ffffff;
-  --text-color: #000000;
-  --link-color: #0000ff;
-  --modal-background-color: #fefefe;
 }
