--- a/wioska/server/templates/index.html
+++ b/wioska/server/templates/index.html
@@ -12,18 +12,21 @@
         <button type="submit">Send</button>
     </form>
     <div id="chat-history"></div>
+    <script>
+        function speak(text) {
+            var msg = new SpeechSynthesisUtterance();
+            msg.text = text;
+            window.speechSynthesis.speak(msg);
+        }
+    </script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script>
         $("#chat-form").submit(function(event) {
             event.preventDefault();
-
-            // Get the message from the input field
+    
             var message = $("#message").val();
-
-            // Clear the input field
             $("#message").val("");
-
-            // Send the message to the Flask app using AJAX
+    
             $.ajax({
                 url: "/chat",
                 method: "POST",
@@ -31,9 +34,9 @@
                 dataType: "json",
                 success: function(response) {
                     if (response.message) {
-                        // Display the generated text in the chat history
                         $("#chat-history").append("<p>" + message + "</p>");
                         $("#chat-history").append("<p>" + response.message + "</p>");
+                        speak(response.message); // Use the speak function here
                     } else {
                         alert("Error: " + response.error);
                     }
